--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -86,7 +86,7 @@
               <a href=" # ">Home</a>
             </li>
             <li>
-              <a href="# ">About</a>
+              <a href="aboutus.html">About</a>
             </li>
             <li>
               <a href="# ">Menu</a>
