--- a/conFusion/aboutus.html
+++ b/conFusion/aboutus.html
@@ -39,7 +39,7 @@
               <span class="fa fa-list fa-lg"></span> Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="contactus.html">
               <span class="fa fa-address-card fa-lg"></span>Contact</a>
           </li>
         </ul>
@@ -157,7 +157,7 @@
               <a href="#">Menu</a>
             </li>
             <li>
-              <a href="#">Contact</a>
+              <a href="contactus.html">Contact</a>
             </li>
           </ul>
         </div>
