--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -49,15 +49,25 @@
   <header class="header jumbotron">
     <div class="container">
       <div class="row row-header">
-        <div class="col-12 col-sm-6">
+        <div class="col-6 col-sm-6">
+
           <h1>Ristorante con Fusion</h1>
           <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations
             will tickle your culinary senses!</p>
         </div>
-        <div class="col-12 col-sm align-self-center">
+
+        <div class="col-6 col-sm align-self-center">
           <img src="img/logo.png" class="img-fluid">
         </div>
+        <div class="col-6 col-sm align-self-center">
+          <a href="#form">
+            <button type="button" class="btn btn-warning btn-lg btn-block">Reserve Table</button>
+          </a>
+
+        </div>
+
       </div>
+
     </div>
   </header>
 
@@ -65,7 +75,9 @@
   <div class="container">
     <div class="row row-content align-items-center">
       <div class="col-12 col-sm-4 order-sm-last col-md-3">
-        <h3>Our Lipsmacking Culinary Creations</h3>
+        <h3>
+          <b>Our Lipsmacking Culinary Creations</b>
+        </h3>
       </div>
       <div class="col col-sm order-sm-first col-md">
         <div class="media">
@@ -83,19 +95,29 @@
     </div>
 
 
-    <div class="
-             row row-content align-items-center
-             ">
+    <div class="row row-content align-items-center">
       <div class="col-12
-             col-sm-4
-             col-md-3
-             ">
-        <h3>This Month's Promotions</h3>
+             col-sm-4 order-sm-first
+             col-md-3">
+        <h3>
+          <b>This Month's Promotions</b>
+        </h3>
       </div>
-      <div class="col col-sm col-md">
-        <h2>Weekend Grand Buffet</h2>
-        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees
-          and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+
+      <div class="col col-sm order-sm-first col-md">
+        <div class="media">
+          <!-- <img class=" img-thumbnail align-self-end mr-3" src="img/buffet.png" alt="Buffet"> -->
+          <div class="media-body">
+            <h2 class="mt-0">Weekend Grand Buffet
+              <span class="badge badge-danger">NEW</span>
+            </h2>
+
+            <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main
+              entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+          </div>
+          <img class=" img-thumbnail align-self-end mr-3" src="img/buffet.png" alt="Buffet">
+
+        </div>
       </div>
     </div>
 
@@ -118,7 +140,68 @@
     </div>
   </div>
 
-  <footer class="footer">
+  <div class="container" id="form">
+    <div class=" row row-content justify-content-center">
+      <div class="col-8 col-xs-12">
+        <div class="card">
+          <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+          <div class="card-body">
+
+            <form id="reservation">
+              <div class="form-group row">
+                <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
+                <div class="col-md-10">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                    <label class="form-check-label" for="inlineRadio1">1</label>
+                  </div>
+
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                    <label class="form-check-label" for="inlineRadio1">2</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                    <label class="form-check-label" for="inlineRadio1">3</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                    <label class="form-check-label" for="inlineRadio1">4</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                    <label class="form-check-label" for="inlineRadio1">5</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                    <label class="form-check-label" for="inlineRadio1">6</label>
+                  </div>
+
+                </div>
+              </div>
+              <div class="form-row">
+                <label for="lastname" class="col-md-2 col-form-label">Date and Time</label>
+                <div class="col">
+                  <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                </div>
+                <div class="col">
+                  <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                </div>
+              </div>
+            </form>
+            <br>
+            <div class="form-group row">
+              <div class="offset-md-2 col-md-10">
+                <button type="submit" class="btn btn-primary">Reserve</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer class=" footer ">
     <div class=" container ">
       <div class="row ">
         <div class="col-4 col-sm-2 ">
@@ -128,13 +211,13 @@
               <a href=" # ">Home</a>
             </li>
             <li>
-              <a href="aboutus.html">About</a>
+              <a href="aboutus.html ">About</a>
             </li>
             <li>
               <a href="# ">Menu</a>
             </li>
             <li>
-              <a href="contactus.html">Contact</a>
+              <a href="contactus.html ">Contact</a>
             </li>
           </ul>
         </div>
@@ -145,34 +228,34 @@
             <br> Clear Water Bay, Kowloon
             <br> HONG KONG
             <br>
-            <i class="fa fa-phone fa-lg"></i>: +852 1234 5678
+            <i class="fa fa-phone fa-lg "></i>: +852 1234 5678
             <br>
-            <i class="fa fa-fax fa-lg"></i>: +852 8765 4321
+            <i class="fa fa-fax fa-lg "></i>: +852 8765 4321
             <br>
-            <i class="fa fa-envelope fa-lg"></i>:
-            <a href="mailto:confusion@food.net">confusion@food.net</a>
+            <i class="fa fa-envelope fa-lg "></i>:
+            <a href="mailto:confusion@food.net ">confusion@food.net</a>
 
           </address>
         </div>
         <div class="col-12 col-sm-4 align-self-center ">
-          <div class="text-center">
-            <a class="btn btn-social-icon btn-google" href="http://google.com/+">
-              <i class="fa fa-google-plus"></i>
+          <div class="text-center ">
+            <a class="btn btn-social-icon btn-google " href="http://google.com/+ ">
+              <i class="fa fa-google-plus "></i>
             </a>
-            <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id=">
-              <i class="fa fa-facebook"></i>
+            <a class="btn btn-social-icon btn-facebook " href="http://www.facebook.com/profile.php?id=">
+              <i class=" fa fa-facebook "></i>
             </a>
-            <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/">
-              <i class="fa fa-linkedin"></i>
+            <a class="btn btn-social-icon btn-linkedin " href="http://www.linkedin.com/in/ ">
+              <i class="fa fa-linkedin "></i>
             </a>
-            <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/">
-              <i class="fa fa-twitter"></i>
+            <a class="btn btn-social-icon btn-twitter " href="http://twitter.com/ ">
+              <i class="fa fa-twitter "></i>
             </a>
-            <a class="btn btn-social-icon btn-google" href="http://youtube.com/">
-              <i class="fa fa-youtube"></i>
+            <a class="btn btn-social-icon btn-google " href="http://youtube.com/ ">
+              <i class="fa fa-youtube "></i>
             </a>
-            <a class="btn btn-social-icon" href="mailto:">
-              <i class="fa fa-envelope-o"></i>
+            <a class="btn btn-social-icon " href="mailto: ">
+              <i class="fa fa-envelope-o "></i>
             </a>
           </div>
         </div>
