--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -43,7 +43,7 @@
           </li>
         </ul>
         <span class="navbar-text">
-          <a data-toggle="modal" data-target="#loginModal">
+          <a id="loginButton">
             <span class="fa fa-sign-in"></span> Login</a>
         </span>
       </div>
@@ -55,7 +55,9 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">Login </h4>
+          <h4 class="modal-title">
+            <b>Login </b>
+          </h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
@@ -78,7 +80,7 @@
               </div>
             </div>
             <div class="form-row">
-              <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-secondary btn-sm ml-auto">Cancel</button>
               <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
             </div>
           </form>
@@ -106,7 +108,7 @@
           <!-- <a href="#form">
             <button type="button" class="btn btn-warning btn-sm btn-block">Reserve Table</button>
           </a> -->
-          <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal" data-target="#reservationModal">Reserve Table</a>
+          <a role="button" class="btn btn-block nav-link btn-warning" id="reserveButton">Reserve Table</a>
 
         </div>
 
@@ -116,12 +118,14 @@
   </header>
 
   <div class="container">
-    <div id="reservationModal" class="modal fade" role="dialog">
+    <div id="reservationModal" class="modal hide fade" role="dialog">
       <div class="modal-dialog modal-lg" role="content">
         <!-- Modal content-->
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">Reserve a Table </h4>
+            <h4 class="modal-title">
+              <b>Reserve a Table</b>
+            </h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
 
@@ -408,6 +412,28 @@
         $("#carouselButton").children("span").removeClass('fa-play');
         $("#carouselButton").children("span").addClass('fa-pause');
       }
+    });
+  </script>
+
+  <script>
+    $(function () {
+
+      $('#reserveButton').click(function () {
+        $('#reservationModal').modal('toggle');
+        return false;
+      })
+
+    });
+  </script>
+
+  <script>
+    $(function () {
+
+      $('#loginButton').click(function () {
+        $('#loginModal').modal('toggle');
+        return false;
+      })
+
     });
   </script>
 
